--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
+/* variables */
+
+:root {
+  --gray-100: #f7fafc;
+  --gray-200: #edf2f7;
+  --gray-300: #e2e8f0;
+  --gray-400: #cbd5e0;
+  --gray-500: #a0aec0;
+  --gray-600: #718096;
+  --gray-700: #4a5568;
+  --gray-800: #2d3748;
+  --gray-900: #1a202c;
+}
+
+/* base */
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +33,203 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* buttons */
+
+.btn {
+  margin: 0.25rem;
+  border: 0;
+  border-radius: 4px;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: var(--gray-600);
+  color: white;
+}
+
+.btn-primary:hover {
+  background-color: var(--gray-700);
+  color: white;
+}
+
+.btn.disabled {
+  background-color: var(--gray-400);
+  cursor: not-allowed;
+}
+
+/* cards */
+
+.card {
+  margin: 1rem;
+  border: 1px solid var(--gray-400);
+  border-radius: 4px;
+  padding: 1rem;
+}
+
+.card .title,
+.card .description {
+  margin: 0;
+  overflow: auto;
+}
+
+/* forms */
+
+.form {
+  display: flex;
+  flex-flow: row wrap;
+
+  margin: 1rem;
+  border: 1px solid white;
+  border-radius: 4px;
+  padding: 0.25rem;
+  width: 100%;
+  background-color: white;
+}
+
+.form .input {
+  margin: 0.25rem;
+  border: 0;
+  padding: 1rem;
+  width: 100%;
+  background-color: var(--gray-200);
+  font-size: 1rem;
+}
+
+.form .select {
+  margin: 0.25rem;
+  border: 0;
+  border-radius: 4px;
+  padding: 1rem;
+  width: 100%;
+  background-color: var(--gray-200);
+  font-size: 1rem;
+}
+
+.form .btn {
+  padding: 0 2rem;
+  font-size: 1rem;
+}
+
+/* components */
+
+.search {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.search-header {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+
+  height: 30vh;
+  width: 100%;
+  background-color: var(--gray-900);
+}
+
+.search-title {
+  color: white;
+  font-size: 3rem;
+}
+
+.search-form {
+  position: sticky;
+  top: 0;
+
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+
+  width: 100%;
+  background-color: var(--gray-900);
+}
+
+.search-form .container {
+  display: flex;
+
+  width: 100%;
+}
+
+.search-form .btn {
+  padding: 1rem;
+  width: 100%;
+}
+
+.search-links,
+.search-results {
+  margin: 0;
+  padding-inline-start: 0;
+  width: 100%;
+}
+
+.search-links .item,
+.search-results .item {
+  list-style-type: none;
+}
+
+.search-links {
+  display: grid;
+  grid-template-columns: 1fr auto auto auto auto 1fr;
+  grid-template-areas: '. prev first last next .';
+
+  margin-bottom: 1rem;
+}
+
+.search-links .btn {
+  padding: 1rem;
+}
+
+.prev {
+  grid-area: prev;
+}
+
+.first {
+  grid-area: first;
+}
+
+.last {
+  grid-area: last;
+}
+
+.next {
+  grid-area: next;
+}
+
+/* utilities */
+
+.max-width {
+  max-width: 1024px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+/* responsive */
+
+/* sm */
+@media (min-width: 640px) {
+  .search-links .btn {
+    padding: 1rem 2rem;
+  }
+}
+
+/* md */
+@media (min-width: 768px) {
+  /* ... */
+}
+
+/* lg */
+@media (min-width: 1024px) {
+  .form {
+    flex-flow: row nowrap;
+  }
+}
+
+/* xl */
+@media (min-width: 1280px) {
+  /* ... */
 }
